[gd_scene format=3 uid="uid://clx7lsj5d3bgk"]

[ext_resource type="Script" uid="uid://c3qt3cphshp4f" path="res://script/ui/player_hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glow_bg"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glow_fill"]
bg_color = Color(0, 2, 1.5, 0.5)
corner_radius_left = 4
corner_radius_top = 4
corner_radius_right = 4
corner_radius_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.8, 0.6, 0.8)
corner_radius_left = 4
corner_radius_top = 4
corner_radius_right = 4
corner_radius_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0, 1, 0.8, 1)
corner_radius_left = 2
corner_radius_top = 2
corner_radius_right = 2
corner_radius_bottom = 2

[node name="PlayerHUD" type="CanvasLayer" unique_id=876157245]
layer = 10
script = ExtResource("1_hud")

[node name="TopLeft" type="VBoxContainer" parent="."]
offset_left = 30.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 150.0
theme_override_constants/separation = 8

[node name="HPContainer" type="VBoxContainer" parent="TopLeft"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HPTitle" type="Label" parent="TopLeft/HPContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0.4, 0.3, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "HP"

[node name="HPBarContainer" type="Control" parent="TopLeft/HPContainer"]
custom_minimum_size = Vector2(220, 28)
layout_mode = 2

[node name="HPBarGlow" type="ProgressBar" parent="TopLeft/HPContainer/HPBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_glow_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_glow_fill")
value = 100.0
show_percentage = false

[node name="HPBar" type="ProgressBar" parent="TopLeft/HPContainer/HPBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="TopLeft/HPContainer/HPBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldContainer" type="HBoxContainer" parent="TopLeft"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GoldIconContainer" type="Control" parent="TopLeft/GoldContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4

[node name="GoldIcon" type="Polygon2D" parent="TopLeft/GoldContainer/GoldIconContainer"]
color = Color(1, 0.85, 0, 1)
polygon = PackedVector2Array(10, 0, 18, 4, 18, 14, 10, 18, 2, 14, 2, 4)

[node name="GoldLabel" type="Label" parent="TopLeft/GoldContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_colors/font_outline_color = Color(0.5, 0.4, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="LevelContainer" type="HBoxContainer" parent="TopLeft"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelIconContainer" type="Control" parent="TopLeft/LevelContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4

[node name="LevelIcon" type="Polygon2D" parent="TopLeft/LevelContainer/LevelIconContainer"]
modulate = Color(0.5, 0.8, 1, 1)
color = Color(0.5, 0.8, 1, 1)
polygon = PackedVector2Array(10, 2, 16, 10, 10, 18, 4, 10)

[node name="LevelLabel" type="Label" parent="TopLeft/LevelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.4, 0.6, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Lv.1"

[node name="ExpContainer" type="HBoxContainer" parent="TopLeft"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExpIconContainer" type="Control" parent="TopLeft/ExpContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4

[node name="ExpIcon" type="Polygon2D" parent="TopLeft/ExpContainer/ExpIconContainer"]
color = Color(0.2, 1, 0.4, 1)
polygon = PackedVector2Array(10, 0, 20, 10, 10, 20, 0, 10)

[node name="ExpLabel" type="Label" parent="TopLeft/ExpContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.2, 1, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0.4, 0.1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "0 / 100"
